# paintdry

./: .gitignore  Dockerfile  Dockerfile-updater  LICENSE  README.md  config.json  database.py  docker-compose.yml  downloader.Dockerfile  downloader.sh  gui.Dockerfile  index.html  pyproject.toml  requirements.txt  schema.sql  server.py  update.py  updater.sh  utils.py
config/: config.json
dockerfiles/: downloader.Dockerfile  gui.Dockerfile  updater.Dockerfile
gui/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
gui/src/: App.tsx  CodeBlock.tsx  ConfigView.tsx  Layout.tsx  ObservationsView.tsx  ResourcesView.css  ResourcesView.tsx  SearchView.tsx  SingleConfigView.tsx  SingleJsonView.tsx  SingleResourceView.css  SingleResourceView.tsx  TableView.tsx  (+1 more)
lookup/: __main__.py  database.py  index.html  server.py  update.py
misc/: cfgmgmtcamp-2026.md
modules/: README.md  modcfechecksums.py  modcontainers.py  moddns.py  modexample.py  modgithub.py  modhttp.py  modlib.py  modsimplechecksums.py  modtls.py
paintdry/: __main__.py  config_requests.py  database.py  github_downloader.py  lib.py  process_responses.py  resource_requests.py  run_modules.py  server.py  update.py
scripts/: downloader.sh  trivy-scans.sh  updater.sh
secdb/: __main__.py  database.py  download_repos.py  github_downloader.py  lib.py  server.py  update.py  utils.py
slides/: cfgmgmtcamp-2026.md
tests/: conftest.py  test_modules.py  test_utils.py
updater/: CLAUDE.md  Cargo.toml
updater/src/: config.rs  database.rs  main.rs  module.rs  types.rs  updater.rs  utils.rs
(+4 files in other folders)
