[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
sha2 = "0.10"
chrono = "0.4"
postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
